Update Project Structure
- Update README.md
- Update pom.xml
- Move Source Folder & Resources
- Switch Commands to Lamp
- Other Bug Fixes